--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/Clayton-Andersen/api-for-your-thoughts#readme",
   "dependencies": {
     "express": "^4.17.1",
+    "mongodb": "^4.1.1",
     "mongoose": "^6.0.4"
   },
   "devDependencies": {}
